# one-true-pairing

./: .gitmodules  Cargo.toml  README.md  regen_protocols.sh
.github/workflows/: build.yml
img/: png2argb.py
one-true-pairing/: Cargo.toml
one-true-pairing/src/: dbus_utils.rs  main.rs  socket_fd_ext.rs  totp.rs
one-true-pairing/src/notifier/: mod.rs
one-true-pairing/src/secrets/: crypto.rs  dh.rs  mod.rs
one-true-pairing/src/wayland/: connection.rs  error.rs  mod.rs  packet.rs
one-true-pairing/src/wayland/protocol/: mod.rs  wayland.rs
socket-fd-ext/: Cargo.toml
socket-fd-ext/src/: lib.rs
src/: main.rs  secrets.rs
src/notifier/: mod.rs  proxies.rs
src/secrets/: crypto.rs  dh.rs  mod.rs  proxies.rs
src/wayland/: connect.rs  connection.rs  error.rs  fixed.rs  mod.rs  packet.rs
whale-land/: Cargo.toml
whale-land/src/: connection.rs  error.rs  lib.rs  packet.rs
whale-land/src/protocol/: ext_data_control_v1.rs  mod.rs  wayland.rs
wlproto/: Cargo.toml
wlproto/src/: main.rs  output.rs
