[package]
name = "one-true-pairing"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = { version = "0.8" }
cbc = { version = "0.1" }
crypto-bigint = { version = "0.6", features = ["alloc"] }
hkdf = { version = "0.12" }
hmac = { version = "0.12", features = ["reset"] }
libc = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
sha-1 = { version = "0.10" }
sha2 = { version = "0.10" }
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
zbus = { version = "5.12" }
zeroize = { version = "1.8", features = ["zeroize_derive"] }
